# mygrations

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .style.yapf  .travis.yml  CHANGELOG.md  LICENSE.txt  NOTES.md  README.md  build.sh  mygrate.py  pyproject.toml  setup.py  test.py
.github/workflows/: create-version.yaml  run-tests.yml  tests-matrix.yaml  tests.yaml
mygrations/: mygrate.py
mygrations/core/commands/: __init__.py  apply.py  base.py  check.py  import_files.py  plan.py  plan_export.py  version.py
mygrations/core/definitions/: base.py  constraint.py  constraint_test.py  database.py  index.py  index_test.py  option.py  option_test.py  rows.py  table.py  table_test.py
mygrations/core/operations/: add_column.py  add_column_test.py  add_constraint.py  add_constraint_test.py  add_index.py  add_index_test.py  add_row.py  add_row_test.py  alter_table.py  alter_table_test.py  change_column.py  change_column_test.py  change_constraint.py  change_constraint_test.py  change_index.py  change_index_test.py  change_key.py  change_row.py  change_row_test.py  create_table.py  create_table_test.py  disable_checks.py  disable_checks_test.py  enable_checks.py  enable_checks_test.py  remove_column.py  remove_column_test.py  remove_constraint.py  remove_constraint_test.py  remove_index.py  remove_index_test.py  remove_row.py  remove_row_test.py  remove_table.py  remove_table_test.py  row_insert.py  row_update.py
mygrations/core/parse/: parser.py  rule_base.py  rule_children.py  rule_children_test.py  rule_delimited.py  rule_delimited_test.py  rule_literal.py  rule_literal_test.py  rule_regexp.py  rule_regexp_test.py
mygrations/drivers/mysqldb/: mysqldb.py
mygrations/drivers/pymysql/: pymysql.py
mygrations/helpers/: db_credentials.py  dotenv.py  dotenv_test.py
mygrations/integration_tests/: add_only_test.py
mygrations/tests/integration/: add_conflicting_fks_test.py  add_only_test.py  backslashes_test.py  database_unfulfilled_fks_test.py  fk_column_type_change_test.py  mygrate_nulls_test.py  mygrate_rows_different_types_test.py  mygrate_rows_simple_test.py  regression_test.py  regression_tests.py  simple_modify_test.py  table_constraint_regressions_test.py  (+8 more)
tests/helpers/: test_dotenv_get_contents.py  test_dotenv_parse.py  test_dotenv_parse_line.py  test_dotenv_parse_line_with_qoutes.py  test_dotenv_parse_line_with_quotes.py
(+140 files in other folders)
